# web_scraper

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  sb.yml
config/: api_core.txt  blacklist.txt  noise_strings.txt
output/: 103-254-68-212.csv  111-207-249-89.csv  47-100-177-181.csv  61-129-3-5.csv  bid-stte-com.csv  dcp-sc-10086-cn.csv  new-hsh-139sc-com.csv  tga-new-collect-racoondigi-cn.csv  www-hsh-139sc-com.csv  www-pmxin-com.csv  www-shticp-net.csv  www-shwshr-com.csv  wx-10086-cn.csv
output/output/: 103-254-68-212.csv
src/: main.rs
