[package]
name = "web_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1"
colored = "2"
tempdir = "0.3"
urlencoding = "2.1"
serde_json = "1.0"
indicatif = "0.17"
scraper = "0.19.0"
url = "2.5.0"
csv = "1.3.0"